#2: A játéktér grid csak a játék-kezdés után jelenjen meg.

--- a/Snake_2/MainWindow.xaml
+++ b/Snake_2/MainWindow.xaml
@@ -27,7 +27,7 @@
                     
         </TextBlock>
 
-        <Grid x:Name="ArenaGrid">
+        <Grid x:Name="ArenaGrid" Visibility="Hidden">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
